--- a/HCore-PagesUI-Views/Pages/Error.cshtml
+++ b/HCore-PagesUI-Views/Pages/Error.cshtml
@@ -3,13 +3,13 @@
 @model ErrorModel
 @inject IHostingEnvironment host
 @{
-    ViewData["Title"] = ErrorCodes.error_title;
+    ViewData["Title"] = Messages.error_title;
 }
 
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <h4>@ErrorCodes.error_header</h4>
-        <p>@ErrorCodes.error_header_text</p>
+        <h4>@Messages.error_header</h4>
+        <p>@Messages.error_header_text</p>
         <hr />
         @if (!string.IsNullOrEmpty(Model.Error))
         {
@@ -27,11 +27,17 @@
             </p>
         }
 
-        @if (!string.IsNullOrEmpty(Model.RequestId))
+        @if (Model.ShowRequestId && !string.IsNullOrEmpty(Model.RequestId))
         {
             <p>
-                <strong>@ErrorCodes.error_request_id</strong> <code>@Model.RequestId</code>
+                <strong>@Messages.error_request_id</strong> <code>@Model.RequestId</code>
             </p>
         }
+
+        <hr />
+
+        <p>
+            <a href="/" class="btn btn-primary" role="button">@Messages.button_back</a>
+        </p>
     </div>
 </div>
