--- a/HCore-Identity-PagesUI-Views/Pages/Account/Register.cshtml
+++ b/HCore-Identity-PagesUI-Views/Pages/Account/Register.cshtml
@@ -19,28 +19,52 @@
             {
                 <div class="form-group">
                     <label asp-for="Input.FirstName"></label>
-                    <input asp-for="Input.FirstName" class="form-control" />                    
+                    <input asp-for="Input.FirstName" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="Input.LastName"></label>
-                    <input asp-for="Input.LastName" class="form-control" />                    
+                    <input asp-for="Input.LastName" class="form-control" />
                 </div>
             }
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />                
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.PasswordConfirmation"></label>
-                <input type="password" autocomplete="off" asp-for="Input.PasswordConfirmation" class="form-control" />                
-            </div>
             @if (configurationProvider.RegisterPhoneNumber)
             {
                 <div class="form-group">
                     <label asp-for="Input.PhoneNumber"></label>
-                    <input asp-for="Input.PhoneNumber" class="form-control" />                    
+                    <input asp-for="Input.PhoneNumber" class="form-control" />
                 </div>
             }
+            <div class="form-group">
+                <label asp-for="Input.Password"></label>
+                <input type="password" autocomplete="off" asp-for="Input.Password" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.PasswordConfirmation"></label>
+                <input type="password" autocomplete="off" asp-for="Input.PasswordConfirmation" class="form-control" />
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label asp-for="Input.AcceptTermsAndConditions">
+                        <input asp-for="Input.AcceptTermsAndConditions" />
+                        @Html.Raw(string.Format(Messages.accept_terms_and_conditions, Model.ProductName, Model.TermsAndConditionsUrl))
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label asp-for="Input.AcceptPrivacyPolicy">
+                        <input asp-for="Input.AcceptPrivacyPolicy" />
+                        @Html.Raw(string.Format(Messages.accept_privacy_policy, Model.ProductName, Model.PrivacyPolicyUrl))
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label asp-for="Input.AcceptCommunication">
+                        <input asp-for="Input.AcceptCommunication" />
+                        @Html.Raw(string.Format(Messages.accept_communication, Model.ProductName, Model.PrivacyPolicyUrl))
+                    </label>
+                </div>
+            </div>
             <button type="submit" class="btn btn-default">@Messages.button_register</button>
         </form>
     </div>
